fix: begraafplaats in templates, melder from signaal in templates

--- a/app/apps/context/templates/benc/melding_detail_locaties.html
+++ b/app/apps/context/templates/benc/melding_detail_locaties.html
@@ -25,8 +25,13 @@
                                     Begraafplaats
                                 </h3>
                                 <p>
-                                    {% if melding.signalen_voor_melding.0.meta.begraafplaats %}
-                                        {% vind_in_dict melding.meta_uitgebreid.begraafplaats.choices melding.signalen_voor_melding.0.meta.begraafplaats %}
+                                    {% if melding.locaties_voor_melding.0.begraafplaats %}
+                                        {% vind_in_dict melding.signalen_voor_melding.0.meta_uitgebreid.begraafplaats.choices melding.locaties_voor_melding.0.begraafplaats as signaal_begraafplaats_naam %}
+                                        {% if signaal_begraafplaats_naam == melding.locaties_voor_melding.0.begraafplaats %}
+                                            {% vind_in_dict melding.meta_uitgebreid.begraafplaats.choices melding.locaties_voor_melding.0.begraafplaats %}
+                                        {% else %}
+                                            {{ signaal_begraafplaats_naam }}
+                                        {% endif %}
                                     {% else %}
                                         -
                                     {% endif %}
