--- a/app/apps/context/templates/benc/melding_detail_melder.html
+++ b/app/apps/context/templates/benc/melding_detail_melder.html
@@ -28,7 +28,7 @@
                 {% endif %}
                 {% if melding.signalen_voor_melding.0.melder.telefoonnummer %}
                     <li>
-                        <a href="tel:{{ melding.meta.telefoon_melder }}" class="link--phone">
+                        <a href="tel:{{ melding.signalen_voor_melding.0.melder.telefoonnummer }}" class="link--phone">
                             <svg width="22"
                                  height="22"
                                  viewBox="0 0 14 22"
