--- a/app/apps/context/templates/benc/melding_afhandelen_omschrijving_extern.html
+++ b/app/apps/context/templates/benc/melding_afhandelen_omschrijving_extern.html
@@ -1,5 +1,5 @@
 {% load rotterdam_formulier_html %}
-{% if melding.meta.terugkoppeling_gewenst == "Ja" and melding.meta.email_melder %}
+{% if melding.signalen_voor_melding.0.meta.terugkoppeling_gewenst == "Ja" and melding.signalen_voor_melding.0.melder.email %}
     <div class="form-control__with-helptext js-validation">
         {{ form.standaard_omschrijvingen|render_rotterdam_formulier }}
         {{ form.omschrijving_extern|render_rotterdam_formulier }}
