--- a/app/apps/context/templates/benc/melding_detail_locaties.html
+++ b/app/apps/context/templates/benc/melding_detail_locaties.html
@@ -15,7 +15,7 @@
                 Locatie
             {% endif %}
         </h2>
-        <div class="display--flex--md">
+        <div>
             <ul class="list-clean">
                 {% for locatie in melding.locaties_voor_melding %}
                     <li>
