--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -189,14 +189,14 @@
                                         {% for signaal in melding.signalen_voor_melding %}
                                         {% comment %} {{ signaal }} {% endcomment %}
                                             <li>
-                                                <button class="btn btn--tab">{% slice_iterable signaal.bron_signaal_id 1 -3 %}</button>
+                                                <button class="btn btn--tab" data-index="{{forloop.counter}}">{% slice_iterable signaal.bron_signaal_id 1 -3 %}</button>
                                             </li>
                                         {% endfor %}
                                         </ul>
                                     </div>
                                     <div class="container__tab-content" data-detail-target="tabsContent">
                                         {% for signaal in melding.signalen_voor_melding %}
-                                            <div class="tab-content">
+                                            <div class="tab-content" data-index="{{forloop.counter}}">
                                                 <div class="display--flex--md">
                                                     <ul class="list-clean">
                                                         <li>
