Scroll (jump) to last scrollPosition

--- a/app/apps/context/templates/standaard/melding_detail_melder.html
+++ b/app/apps/context/templates/standaard/melding_detail_melder.html
@@ -1,5 +1,5 @@
 {% load slice_iterable from main_tags %}
-<section class="section--seperated" data-testid="detailMelder">
+<section class="section--seperated" data-testid="detailMelder"id="detailMelder">
     <div class="container__details">
         <h2>
             <svg width="26"
