Alert added on detailpage

--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -25,6 +25,10 @@
         .list__mutations {
             margin-top: 0;
         }
+
+        .alert {
+            font-size: inherit;
+        }
     }
 }
 
