--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -360,6 +360,26 @@
 
                         {% include "melding/melding_gebruiker_actief.html" %}
                         {% include acties_template %}
+
+                        {% if melding.signalen_voor_melding|length > 1 %}
+                        <div class="alert alert--info">
+                            <span>
+                                <svg width="24"
+                                    height="24"
+                                    viewBox="0 0 24 24"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M21.9 12C21.9 6.5 17.5 2.1 12 2.1C6.5 2.1 2.1 6.5 2.1 12C2.1 17.5 6.5 21.9 12 21.9C17.5 21.9 21.9 17.5 21.9 12ZM0 12C0 5.4 5.4 0 12 0C18.6 0 24 5.4 24 12C24 18.6 18.6 24 12 24C5.4 24 0 18.6 0 12ZM13 7V5H11V7H13ZM13 19V9H11V19H13Z" fill="#00689E" />
+                                </svg>
+                            </span>
+                            <span>Melding samengevoegd met:
+                            {% for signaal in melding.signalen_voor_melding %}
+                                {{ signaal.bron_signaal_id }}{% if not forloop.last %},{% endif %}
+                            {% endfor %}
+                            </span>
+                        </div>
+                        {% endif %}
+
                         {% if melding.status.naam != "afgehandeld" and melding.status.naam != "geannuleerd" %}
                             <section class="section--seperated">
                                 <turbo-frame id="informatie_toevoegen" src="{% url 'informatie_toevoegen' melding.uuid %}">
