--- a/app/apps/context/templates/benc/melding_detail_acties.html
+++ b/app/apps/context/templates/benc/melding_detail_acties.html
@@ -1,20 +1,23 @@
 <div class="container__actions">
     <p>
-        {% if taaktypes and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' %}
+        {% if perms.authorisatie.taak_aanmaken and taaktypes and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' %}
         <button type="button" class="btn btn-{% if melding.status.naam == 'controle' %}tertiary{%else%}action{%endif%}" data-action="detail#openModal" data-detail-action-param="{% url 'taak_starten' melding.uuid %}"><span>Start taak</span></button>
         {% endif %}
-        {% if not melding.afgesloten_op %}
+        {% if perms.authorisatie.melding_afhandelen and not melding.afgesloten_op %}
         <button type="button" class="btn btn-{% if melding.status.naam == 'controle' %}action{%else%}tertiary{%endif%}" data-action="detail#openModal" data-detail-action-param="{% url 'melding_afhandelen' melding.uuid %}"><span>Melding afhandelen</span></button>
         {% endif %}
     </p>
     <ul class="list-links">
         {% if open_taakopdrachten %}
+        {% if perms.authorisatie.taak_afronden %}
         <li>
             <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'taak_afronden' melding.uuid %}">
                 <svg width="18" height="18" viewBox="0 0 55 43" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M49.6439 0.0427246L23.0468 33.2845L4.96397 11.2844L0.317383 15.0798L23.0965 42.8261L54.3288 3.79295L49.6439 0.0427246Z" fill="#00811F"/>
                 </svg>Taak afronden</button>
         </li>
+        {% endif %}
+        {% if perms.authorisatie.taak_annuleren %}
         <li>
             <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'taak_annuleren' melding.uuid %}">
                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -22,7 +25,9 @@
                 </svg>Taak annuleren</button>
         </li>
         {% endif %}
+        {% endif %}
         {% if not melding.afgesloten_op %}
+        {% if perms.authorisatie.melding_annuleren %}
         <li>
             <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'melding_annuleren' melding.uuid %}">
                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -31,6 +36,7 @@
                 Melding annuleren
             </button>
         </li>
+        {% endif %}
         {% endif %}
     </ul>
 </div>
