--- a/app/apps/main/templates/melding/part_informatie_toevoegen.html
+++ b/app/apps/main/templates/melding/part_informatie_toevoegen.html
@@ -14,6 +14,7 @@
         </svg>
         Tijdlijn
     </h2>
+    {% if melding.status.naam != "afgehandeld" and melding.status.naam != "geannuleerd" %}
     <div>
         <div>
             <details class="details-form">
@@ -40,5 +41,6 @@
             </details>
         </div>
     </div>
+    {% endif %}
 </div>
 </turbo-frame>
