--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -468,6 +468,10 @@ section {
     white-space: nowrap;
 }
 
+.no-padding {
+    padding: 0 !important;
+}
+
 .no-margin {
     margin: 0 !important;
 }
