Fix Safari white-space issue, safari specific css

--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -644,6 +644,12 @@ textarea {
                         display: none;
                     }
                 }
+
+                .css--safari & {
+                    float: unset;
+                    display: inline-flex;
+                    line-height: 1rem;
+                }
             }
         }
     }
