--- a/app/apps/context/templates/standaard/melding_detail_acties.html
+++ b/app/apps/context/templates/standaard/melding_detail_acties.html
@@ -39,11 +39,12 @@
             </button>
         </li>
         {% endif %}
-        {% if perms.authorisatie.melding_pauzeren %}
+        {% if perms.authorisatie.melding_pauzeren and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder"%}
         <li>
             <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'melding_pauzeren' melding.uuid %}">
-                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7021 14.7627C12.425 15.8035 10.7902 16.425 9 16.425C4.875 16.425 1.575 13.125 1.575 9C1.575 7.20983 2.19652 5.57503 3.23727 4.29792L13.7021 14.7627ZM14.7627 13.7021L4.29793 3.23726C5.57504 2.19652 7.20983 1.575 9 1.575C13.125 1.575 16.425 4.875 16.425 9C16.425 10.7902 15.8035 12.425 14.7627 13.7021ZM0 9C0 13.95 4.05 18 9 18C13.95 18 18 13.95 18 9C18 4.05 13.95 0 9 0C4.05 0 0 4.05 0 9Z" fill="#00811F"/>
+                <svg width="18" height="18" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M10 11.831V4H12V14H10L4.48389 10.9557L5.48389 9.22364L10 11.831Z" fill="#00811F"/>
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M22 11C22 17.0751 17.0751 22 11 22C4.92487 22 0 17.0751 0 11C0 4.92487 4.92487 0 11 0C17.0751 0 22 4.92487 22 11ZM20 11C20 15.9706 15.9706 20 11 20C6.02944 20 2 15.9706 2 11C2 6.02944 6.02944 2 11 2C15.9706 2 20 6.02944 20 11Z" fill="#00811F"/>
                 </svg>Melding pauzeren
             </button>
         </li>
