--- a/app/apps/main/templates/melding/melding_pauzeren.html
+++ b/app/apps/main/templates/melding/melding_pauzeren.html
@@ -11,7 +11,7 @@
                     aria-label="Sluit"
                     data-action="detail#closeModal"></button>
             <h1>
-                <span>Meer informatie nodig</span>
+                <span>Melding pauzeren</span>
             </h1>
             <div class="alert alert--info">
                 <span>
@@ -65,7 +65,7 @@
                           id="pauzeerForm"
                           novalidate>
                         {% csrf_token %}
-                        <div class="form-control">{{ form.status|render_rotterdam_formulier }}</div>
+                        <div class="form-control__no-border">{{ form.status|render_rotterdam_formulier }}</div>
                         <div class="form-control__with-helptext js-validation">{{ form.omschrijving_intern|render_rotterdam_formulier }}</div>
                         <div class="form-row btn-row">
                             <button type="reset"
