Content changes for pause/unpause

--- a/app/apps/main/templates/melding/melding_hervatten.html
+++ b/app/apps/main/templates/melding/melding_hervatten.html
@@ -24,7 +24,7 @@
                     </svg>
                 </span>
                 <div>
-                    Door deze melding te hervatten wordt de status gewijzigd naar 'Openstaand'.
+                    Door de melding te hervatten wordt de status gewijzigd naar 'Openstaand'.
                 </div>
             </div>
         </div>
