--- a/app/frontend/assets/styles/components/_list-mutations.scss
+++ b/app/frontend/assets/styles/components/_list-mutations.scss
@@ -156,6 +156,11 @@
             }
         }
 
+        .link--email,
+        .link--phone {
+            justify-content: end;
+        }
+
         &[open] {
             > summary {
                 &::before {
