--- a/app/apps/main/templates/melding/part_tijdlijn.html
+++ b/app/apps/main/templates/melding/part_tijdlijn.html
@@ -2,7 +2,7 @@
 {% load to_datetime from date_tags %}
 {% load taakopdracht from melding_tags %}
 {% load multiply previous next from list_tags %}
-{% load gebruiker_middels_email from gebruikers_tags %}
+{% load get_gebruiker_object_middels_email from gebruikers_tags %}
 {% load vertaal from vertaal_tags %}
 {% load rotterdam_formulier_html %}
 <ul class="list__mutations">
@@ -101,25 +101,7 @@
                                                     </dd>
                                                 {% endif %}
                                             {% endif %}
-                                            {% if row_data.mg.taakgebeurtenis.gebruiker %}
-                                                <dt>Gebruiker</dt>
-                                                <dd>
-                                                    <a href=""
-                                                        class="link link--email"
-                                                        data-action="detail#openModal"
-                                                        data-detail-action-param="{% url 'gebruiker_info' gebruiker_email=row_data.mg.taakgebeurtenis.gebruiker %}"
-                                                    >
-                                                        <svg width="20"
-                                                             height="20"
-                                                             viewBox="0 0 20 20"
-                                                             fill="none"
-                                                             xmlns="http://www.w3.org/2000/svg">
-                                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M10 19.7509C15.3848 19.7509 19.75 15.3855 19.75 10.0005C19.75 4.61543 15.3848 0.25 10 0.25C4.61522 0.25 0.25 4.61543 0.25 10.0005C0.25 15.3855 4.61522 19.7509 10 19.7509ZM16.8263 14.6351C17.7248 13.3141 18.25 11.7186 18.25 10.0005C18.25 5.4439 14.5563 1.75007 10 1.75007C5.44365 1.75007 1.75 5.4439 1.75 10.0005C1.75 11.7448 2.29129 13.3627 3.21505 14.6953C3.20119 14.6753 3.18741 14.6552 3.17373 14.6351C4.21773 13.4212 5.57996 12.4888 7.13098 11.9675C6.13466 11.1421 5.5 9.89535 5.5 8.5004C5.5 6.015 7.51472 4.00018 10 4.00018C12.4853 4.00018 14.5 6.015 14.5 8.5004C14.5 9.89536 13.8653 11.1421 12.869 11.9675C14.42 12.4888 15.7823 13.4212 16.8263 14.6351ZM15.8549 15.8131C14.4804 14.0985 12.3684 13.0006 9.99998 13.0006C7.63159 13.0006 5.5196 14.0985 4.14511 15.813C5.63972 17.3186 7.71099 18.2509 10 18.2509C12.289 18.2509 14.3603 17.3186 15.8549 15.8131ZM10 5.50025C8.34315 5.50025 7 6.84346 7 8.5004C7 10.1573 8.34315 11.5005 10 11.5005C11.6569 11.5005 13 10.1573 13 8.5004C13 6.84346 11.6569 5.50025 10 5.50025Z" fill="#00811F" />
-                                                        </svg>
-                                                        {{ row_data.mg.taakgebeurtenis.gebruiker|gebruiker_middels_email }}
-                                                    </a>
-                                                </dd>
-                                            {% endif %}
+                                            {% include "melding/part_gebruiker_modal_link.html" with gebruiker=row_data.mg.taakgebeurtenis.gebruiker|get_gebruiker_object_middels_email tekst="Gebruiker" %}
                                             {% if row_data.mg.taakgebeurtenis.omschrijving_intern %}
                                                 <dt>Interne opmerking</dt>
                                                 <dd>
@@ -127,26 +109,7 @@
                                                 </dd>
                                             {% endif %}
                                         {% elif row_data.mg.locatie %}
-                                            {% if row_data.mg.gebruiker %}
-                                                <dt>Gewijzigd door</dt>
-                                                <dd>
-                                                    <a
-                                                        href="#"
-                                                        class="link link--email"
-                                                        data-action="detail#openModal"
-                                                        data-detail-action-param="{% url 'gebruiker_info' gebruiker_email=row_data.mg.gebruiker %}"
-                                                    >
-                                                        <svg width="20"
-                                                             height="20"
-                                                             viewBox="0 0 20 20"
-                                                             fill="none"
-                                                             xmlns="http://www.w3.org/2000/svg">
-                                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M10 19.7509C15.3848 19.7509 19.75 15.3855 19.75 10.0005C19.75 4.61543 15.3848 0.25 10 0.25C4.61522 0.25 0.25 4.61543 0.25 10.0005C0.25 15.3855 4.61522 19.7509 10 19.7509ZM16.8263 14.6351C17.7248 13.3141 18.25 11.7186 18.25 10.0005C18.25 5.4439 14.5563 1.75007 10 1.75007C5.44365 1.75007 1.75 5.4439 1.75 10.0005C1.75 11.7448 2.29129 13.3627 3.21505 14.6953C3.20119 14.6753 3.18741 14.6552 3.17373 14.6351C4.21773 13.4212 5.57996 12.4888 7.13098 11.9675C6.13466 11.1421 5.5 9.89535 5.5 8.5004C5.5 6.015 7.51472 4.00018 10 4.00018C12.4853 4.00018 14.5 6.015 14.5 8.5004C14.5 9.89536 13.8653 11.1421 12.869 11.9675C14.42 12.4888 15.7823 13.4212 16.8263 14.6351ZM15.8549 15.8131C14.4804 14.0985 12.3684 13.0006 9.99998 13.0006C7.63159 13.0006 5.5196 14.0985 4.14511 15.813C5.63972 17.3186 7.71099 18.2509 10 18.2509C12.289 18.2509 14.3603 17.3186 15.8549 15.8131ZM10 5.50025C8.34315 5.50025 7 6.84346 7 8.5004C7 10.1573 8.34315 11.5005 10 11.5005C11.6569 11.5005 13 10.1573 13 8.5004C13 6.84346 11.6569 5.50025 10 5.50025Z" fill="#00811F" />
-                                                        </svg>
-                                                        {{ row_data.mg.gebruiker|gebruiker_middels_email }}
-                                                    </a>
-                                                </dd>
-                                            {% endif %}
+                                            {% include "melding/part_gebruiker_modal_link.html" with gebruiker=row_data.mg.gebruiker|get_gebruiker_object_middels_email tekst="Gewijzigd door" %}
                                             {% if row_data.mg.aangemaakt_op %}
                                                 <dt>Datum</dt>
                                                 <dd>
@@ -159,45 +122,9 @@
                                                     {{ row_data.mg.omschrijving_intern }}
                                                 </dd>
                                             {% endif %}
-                                            {% if row_data.mg.taakgebeurtenis.additionele_informatie.uitvoerder %}
-                                                <dt>Uitvoerder</dt>
-                                                <dd>
-                                                    <a href="#"
-                                                        class="link link--email"
-                                                        data-action="detail#openModal"
-                                                        data-detail-action-param="{% url 'gebruiker_info' gebruiker_email=row_data.mg.taakgebeurtenis.additionele_informatie.uitvoerder %}"
-                                                    >
-                                                        <svg width="20"
-                                                             height="20"
-                                                             viewBox="0 0 20 20"
-                                                             fill="none"
-                                                             xmlns="http://www.w3.org/2000/svg">
-                                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M10 19.7509C15.3848 19.7509 19.75 15.3855 19.75 10.0005C19.75 4.61543 15.3848 0.25 10 0.25C4.61522 0.25 0.25 4.61543 0.25 10.0005C0.25 15.3855 4.61522 19.7509 10 19.7509ZM16.8263 14.6351C17.7248 13.3141 18.25 11.7186 18.25 10.0005C18.25 5.4439 14.5563 1.75007 10 1.75007C5.44365 1.75007 1.75 5.4439 1.75 10.0005C1.75 11.7448 2.29129 13.3627 3.21505 14.6953C3.20119 14.6753 3.18741 14.6552 3.17373 14.6351C4.21773 13.4212 5.57996 12.4888 7.13098 11.9675C6.13466 11.1421 5.5 9.89535 5.5 8.5004C5.5 6.015 7.51472 4.00018 10 4.00018C12.4853 4.00018 14.5 6.015 14.5 8.5004C14.5 9.89536 13.8653 11.1421 12.869 11.9675C14.42 12.4888 15.7823 13.4212 16.8263 14.6351ZM15.8549 15.8131C14.4804 14.0985 12.3684 13.0006 9.99998 13.0006C7.63159 13.0006 5.5196 14.0985 4.14511 15.813C5.63972 17.3186 7.71099 18.2509 10 18.2509C12.289 18.2509 14.3603 17.3186 15.8549 15.8131ZM10 5.50025C8.34315 5.50025 7 6.84346 7 8.5004C7 10.1573 8.34315 11.5005 10 11.5005C11.6569 11.5005 13 10.1573 13 8.5004C13 6.84346 11.6569 5.50025 10 5.50025Z" fill="#00811F" />
-                                                        </svg>
-                                                        {{ row_data.mg.taakgebeurtenis.additionele_informatie.uitvoerder|gebruiker_middels_email }}
-                                                    </a>
-                                                </dd>
-                                            {% endif %}
+                                            {% include "melding/part_gebruiker_modal_link.html" with gebruiker=row_data.mg.taakgebeurtenis.additionele_informatie.uitvoerder|get_gebruiker_object_middels_email tekst="Uitvoerder" %}
                                         {% else %}
-                                            {% if row_data.mg.gebruiker %}
-                                                <dt>Afgehandeld door</dt>
-                                                <dd>
-                                                    <a href=""
-                                                        class="link link--email"
-                                                        data-action="detail#openModal"
-                                                        data-detail-action-param="{% url 'gebruiker_info' gebruiker_email=row_data.mg.gebruiker %}"
-                                                    >
-                                                        <svg width="20"
-                                                             height="20"
-                                                             viewBox="0 0 20 20"
-                                                             fill="none"
-                                                             xmlns="http://www.w3.org/2000/svg">
-                                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M10 19.7509C15.3848 19.7509 19.75 15.3855 19.75 10.0005C19.75 4.61543 15.3848 0.25 10 0.25C4.61522 0.25 0.25 4.61543 0.25 10.0005C0.25 15.3855 4.61522 19.7509 10 19.7509ZM16.8263 14.6351C17.7248 13.3141 18.25 11.7186 18.25 10.0005C18.25 5.4439 14.5563 1.75007 10 1.75007C5.44365 1.75007 1.75 5.4439 1.75 10.0005C1.75 11.7448 2.29129 13.3627 3.21505 14.6953C3.20119 14.6753 3.18741 14.6552 3.17373 14.6351C4.21773 13.4212 5.57996 12.4888 7.13098 11.9675C6.13466 11.1421 5.5 9.89535 5.5 8.5004C5.5 6.015 7.51472 4.00018 10 4.00018C12.4853 4.00018 14.5 6.015 14.5 8.5004C14.5 9.89536 13.8653 11.1421 12.869 11.9675C14.42 12.4888 15.7823 13.4212 16.8263 14.6351ZM15.8549 15.8131C14.4804 14.0985 12.3684 13.0006 9.99998 13.0006C7.63159 13.0006 5.5196 14.0985 4.14511 15.813C5.63972 17.3186 7.71099 18.2509 10 18.2509C12.289 18.2509 14.3603 17.3186 15.8549 15.8131ZM10 5.50025C8.34315 5.50025 7 6.84346 7 8.5004C7 10.1573 8.34315 11.5005 10 11.5005C11.6569 11.5005 13 10.1573 13 8.5004C13 6.84346 11.6569 5.50025 10 5.50025Z" fill="#00811F" />
-                                                        </svg>
-                                                        {{ row_data.mg.gebruiker|gebruiker_middels_email }}
-                                                    </a>
-                                                </dd>
-                                            {% endif %}
+                                            {% include "melding/part_gebruiker_modal_link.html" with gebruiker=row_data.mg.gebruiker|get_gebruiker_object_middels_email tekst="Afgehandeld door" %}
                                             {% if row_data.mg.aangemaakt_op %}
                                                 <dt>Datum</dt>
                                                 <dd>
