Styling alert multiple users

--- a/app/apps/main/templates/melding/melding_gebruiker_actief.html
+++ b/app/apps/main/templates/melding/melding_gebruiker_actief.html
@@ -23,7 +23,7 @@
             <span>
                 Andere gebruikers hebben deze melding openstaan:
             </span>
-            <ul data-meldingGebruiker-target="gebruikerLijst">
+            <ul class="list-persons" data-meldingGebruiker-target="gebruikerLijst">
             </ul>
         </div>
     </div>
