--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -344,6 +344,10 @@ ul {
                 top: calc(50% - 10px);
                 left: 0;
             }
+
+            a {
+                color: $green-tint01;
+            }
         }
     }
 }
