Clearing searchfield posts form

--- a/app/apps/main/templates/melding/melding_lijst.html
+++ b/app/apps/main/templates/melding/melding_lijst.html
@@ -25,7 +25,7 @@
                         {% endif %}
                     </span>
                 </div>
-                <div class="container__search">{{ form.q|render_rotterdam_formulier }}</div>
+                <div class="container__search" data-filter-target="containerSearch">{{ form.q|render_rotterdam_formulier }}</div>
             </div>
             <div class="container__tools">
                 <div class="container__filter" data-filter-target="filterOverview">
