--- a/app/apps/context/templates/standaard/melding_detail_acties.html
+++ b/app/apps/context/templates/standaard/melding_detail_acties.html
@@ -59,5 +59,6 @@
         </li>
         {% endif %}
         {% endif %}
+        <turbo-frame id="melding_spoed_veranderen_form" src="{% url 'melding_spoed_veranderen' melding.uuid %}"></turbo-frame>
     </ul>
 </div>
