--- a/app/apps/main/templates/melding/part_gebruiker_info.html
+++ b/app/apps/main/templates/melding/part_gebruiker_info.html
@@ -1,5 +1,5 @@
 <turbo-frame id="melding_actie_form">
-<div class="modal-dialog modal-dialog--small">
+<div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
             <h1>
