spoed to modal with internal text, spoed permissions

--- a/app/apps/main/templates/melding/melding_spoed_veranderen.html
+++ b/app/apps/main/templates/melding/melding_spoed_veranderen.html
@@ -2,19 +2,53 @@
 {% load vind_in_dict from querystring_tags %}
 {% load json_encode from json_tags %}
 {% load context_template from context_tags %}
-<turbo-frame id="melding_spoed_veranderen_form">
-    <form action="{% url 'melding_spoed_veranderen' melding.uuid %}"
-            method="post"
-            class="form--horizontal"
-            data-turbo-frame="_top"
-            id="spoedVeranderenForm"
-            novalidate>
-        {% csrf_token %}
-        {{ form.urgentie }}
-        <div class="form-row btn-row">
-            <button type="submit" class="btn btn-action">
-                <span>{{ form.submit_label }}</span>
-            </button>
+<turbo-frame id="melding_actie_form">
+<div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <button type="button"
+                    class="btn-close"
+                    aria-label="Sluit"
+                    data-action="detail#closeModal"></button>
+            <h1>
+                <span>{% if melding.urgentie >= .5 %}Verwijder spoed{% else %}Naar spoed{% endif %}</span>
+            </h1>
         </div>
-    </form>
+        <div class="modal-body">
+            <section class="section--seperated" data-testid="detailReporter">
+                <div class="container__details">
+
+
+                    <form action="{% url 'melding_spoed_veranderen' melding.uuid %}"
+                            method="post"
+                            class="form--horizontal"
+                            data-turbo-frame="_top"
+                            id="spoedVeranderenForm"
+                            novalidate>
+                        {% csrf_token %}
+                        {{ form.urgentie }}
+                        <div class="form-control__with-helptext js-validation">{{ form.omschrijving_intern|render_rotterdam_formulier }}</div>
+                        <div class="form-row btn-row">
+
+                        </div>
+
+                        <div class="form-row btn-row">
+                            <button type="reset"
+                                    class="btn btn-tertiary"
+                                    data-controller="detail"
+                                    data-action="detail#closeModal"
+                                    data-detail-target="modalSpoedVeranderen">
+                                <span>Annuleren</span>
+                            </button>
+                            <button type="submit" class="btn btn-action">
+                                <span>{{ form.submit_label }}</span>
+                            </button>
+                        </div>
+                    </form>
+
+                </div>
+            </section>
+        </div>
+    </div>
+</div>
 </turbo-frame>
