--- a/app/apps/context/templates/standaard/melding_detail_acties.html
+++ b/app/apps/context/templates/standaard/melding_detail_acties.html
@@ -59,6 +59,15 @@
         </li>
         {% endif %}
         {% endif %}
-        <turbo-frame id="melding_spoed_veranderen_form" src="{% url 'melding_spoed_veranderen' melding.uuid %}"></turbo-frame>
+
+        {% if perms.authorisatie.melding_spoed_veranderen and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' %}
+        <li>
+            <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'melding_spoed_veranderen' melding.uuid %}">
+                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.637 0.5L0.5 11.6369V15.8795L4.74263 15.8796L15.8796 4.74264L11.637 0.5ZM13.7583 4.74264L11.637 2.62132L10.046 4.21231L12.1673 6.33363L13.7583 4.74264ZM4.74264 13.7582L11.1066 7.39428L8.98527 5.27296L2.62132 11.6369L4.74264 13.7582Z" fill="#00811F"/>
+                </svg>Spoed aanpassen
+            </button>
+        </li>
+        {% endif %}
     </ul>
 </div>
