--- a/app/apps/context/templates/standaard/melding_detail_acties.html
+++ b/app/apps/context/templates/standaard/melding_detail_acties.html
@@ -10,7 +10,7 @@
         <button type="button" class="btn btn-{% if melding.status.naam == 'controle' %}action{%else%}tertiary{%endif%}" data-action="detail#openModal" data-detail-action-param="{% url 'melding_afhandelen' melding.uuid %}"><span>Melding afhandelen</span></button>
         {% endif %}
     </p>
-    <ul class="list-links">
+    <ul class="list-links padding--bottom">
         {% if open_taakopdrachten %}
         {% if perms.authorisatie.taak_afronden %}
         <li>
@@ -59,15 +59,19 @@
         </li>
         {% endif %}
         {% endif %}
-
-        {% if perms.authorisatie.melding_spoed_veranderen and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' %}
-        <li>
-            <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'melding_spoed_veranderen' melding.uuid %}">
-                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.637 0.5L0.5 11.6369V15.8795L4.74263 15.8796L15.8796 4.74264L11.637 0.5ZM13.7583 4.74264L11.637 2.62132L10.046 4.21231L12.1673 6.33363L13.7583 4.74264ZM4.74264 13.7582L11.1066 7.39428L8.98527 5.27296L2.62132 11.6369L4.74264 13.7582Z" fill="#00811F"/>
-                </svg>Spoed aanpassen
-            </button>
-        </li>
-        {% endif %}
     </ul>
+
+    {% if perms.authorisatie.melding_spoed_veranderen and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' %}
+        <div>
+            <button type="button" class="btn btn-icon btn-checkbox{% if melding.urgentie >= 0.5 %} checked{% endif %}" data-action="detail#openModal" data-detail-action-param="{% url 'melding_spoed_veranderen' melding.uuid %}">
+                <input type="checkbox" class="form-check-input" {% if melding.urgentie >= 0.5 %}checked{% endif %} />
+                Met spoed oppakken
+                <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g id="BadgeAlert">
+                        <path id="Union" fill-rule="evenodd" clip-rule="evenodd" d="M16.0001 6.21875L26.6516 26.0002L5.34849 26.0002L16.0001 6.21875ZM14.2391 5.27055C14.9943 3.86815 17.0059 3.86815 17.761 5.27055L28.4126 25.052C29.13 26.3845 28.165 28.0002 26.6516 28.0002H5.34849C3.83514 28.0002 2.87007 26.3845 3.58755 25.052L14.2391 5.27055ZM15.0001 12.0002H17.0001V20.0002H15.0001V12.0002ZM15.0001 24.0002V22.0002H17.0001V24.0002H15.0001Z" fill="#404B4F"></path>
+                    </g>
+                </svg>
+            </button>
+        </div>
+        {% endif %}
 </div>
