--- a/app/apps/main/templates/melding/melding_spoed_veranderen.html
+++ b/app/apps/main/templates/melding/melding_spoed_veranderen.html
@@ -11,7 +11,7 @@
                     aria-label="Sluit"
                     data-action="detail#closeModal"></button>
             <h1>
-                <span>{% if melding.urgentie >= .5 %}Verwijder spoed{% else %}Naar spoed{% endif %}</span>
+                <span>Melding {% if melding.urgentie >= .5 %}niet {% endif %}met spoed oppakken</span>
             </h1>
         </div>
         <div class="modal-body">
