--- a/app/frontend/assets/styles/components/_tables.scss
+++ b/app/frontend/assets/styles/components/_tables.scss
@@ -106,6 +106,17 @@
             background-color: $white;
         }
     }
+
+    .warning-spoed {
+        display: inline-block;
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        padding-top: 6px;
+        border: 1px solid rgba(237, 181, 0, 0.25);
+        background-color: rgba(237, 181, 0, 0.1);
+        box-sizing: border-box;
+    }
 }
 
 .overview--validate {
