--- a/app/apps/main/templates/melding/melding_spoed_veranderen.html
+++ b/app/apps/main/templates/melding/melding_spoed_veranderen.html
@@ -37,7 +37,7 @@
                                     class="btn btn-tertiary"
                                     data-controller="detail"
                                     data-action="detail#closeModal"
-                                    data-detail-target="modalSpoedVeranderen">
+                                    data-detail-target="modalAfhandelen">
                                 <span>Annuleren</span>
                             </button>
                             <button type="submit" class="btn btn-action">
