fix: legenda color

--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -209,7 +209,7 @@
         display: inline-block;
         width: 24px;
         height: 24px;
-        background-color: #d36000;
+        background-color: #78b4ff;
         margin-right: $input-padding-y;
         vertical-align: bottom;
 
