fix: double detail controller inits

--- a/app/apps/main/templates/melding/part_informatie_toevoegen.html
+++ b/app/apps/main/templates/melding/part_informatie_toevoegen.html
@@ -2,7 +2,7 @@
 {% load vind_in_dict from querystring_tags %}
 {% load json_encode from json_tags %}
 <turbo-frame id="informatie_toevoegen">
-<div class="container__details" data-controller="detail">
+<div class="container__details">
     <h2>
         <svg width="21"
              height="22"
