--- a/app/apps/authenticatie/templates/auth/account.html
+++ b/app/apps/authenticatie/templates/auth/account.html
@@ -3,7 +3,7 @@
     <turbo-frame id="overview">
     <div class="border-green print-only"></div>
     <div class="page__detail">
-        <div data-controller="detail">
+        <div>
             <div class="grid-container">
                 <div class="grid-item">
                     <div>
